# Demo-lvgl

./: CMakeLists.txt  Readme.md  Todo.md
cmake-modules/: FindMariaDBClient.cmake
include/: db_utils.h  gen_header.h  gen_header.h.in  lv_conf.h  lv_drv_conf.h  ui_utils.h
src/: CMakeLists.txt  db_utils.c  img_icon_eco2.c  img_icon_humidity.c  img_icon_pressure.c  img_icon_temperature.c  lv_conf.h  main.c  ui_utils.c
